<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_cream"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        android:gravity="center_horizontal">

        <!-- titulo -->
        <TextView
            android:id="@+id/tv_title_dashboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_dashboard"
            android:textColor="@color/primary_green"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"/>

        <!-- img -->
        <ImageView
            android:id="@+id/iv_foto_mascota"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/img_mascota"
            android:scaleType="centerCrop"
            android:background="@drawable/border_history"
            android:clipToOutline="true"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/tv_nombre_mascota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Polar"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="40dp"
            android:paddingEnd="40dp">

            <LinearLayout
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:orientation="horizontal" android:gravity="center_vertical" android:layout_marginBottom="12dp">
                <ImageView android:layout_width="24dp" android:layout_height="24dp"
                    android:src="@drawable/ic_especie" app:tint="@color/primary_green" />
                <TextView android:id="@+id/tv_display_especie" android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:text="Especie: Felino"
                    android:layout_marginStart="12dp" android:textSize="18sp" android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:orientation="horizontal" android:gravity="center_vertical" android:layout_marginBottom="12dp">
                <ImageView android:layout_width="24dp" android:layout_height="24dp"
                    android:src="@drawable/ic_edad" app:tint="@color/primary_green" />
                <TextView android:id="@+id/tv_display_edad" android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:text="Edad: 4 años"
                    android:layout_marginStart="12dp" android:textSize="18sp" android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:orientation="horizontal" android:gravity="center_vertical" android:layout_marginBottom="12dp">
                <ImageView android:layout_width="24dp" android:layout_height="24dp"
                    android:src="@drawable/ic_peso" app:tint="@color/primary_green" />
                <TextView android:id="@+id/tv_display_peso" android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:text="Peso: 6.5 kg"
                    android:layout_marginStart="12dp" android:textSize="18sp" android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:orientation="horizontal" android:gravity="center_vertical" android:layout_marginBottom="25dp">
                <ImageView android:layout_width="24dp" android:layout_height="24dp"
                    android:src="@drawable/ic_genero" app:tint="@color/primary_green" />
                <TextView android:id="@+id/tv_display_genero" android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:text="Género: Macho"
                    android:layout_marginStart="12dp" android:textSize="18sp" android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>

        <!-- botones -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginBottom="30dp">

            <!-- fila 1 boton -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">

                <Button android:id="@+id/btn_comida"
                    android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"
                    android:text="@string/btn_comida" android:backgroundTint="@color/primary_green"
                    android:textColor="@color/white" android:layout_margin="3dp" android:textSize="12sp"
                    android:padding="0dp" android:gravity="center" android:includeFontPadding="false"/>

                <Button android:id="@+id/btn_agua"
                    android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"
                    android:text="@string/btn_agua" android:backgroundTint="@color/primary_green"
                    android:textColor="@color/white" android:layout_margin="3dp" android:textSize="12sp"
                    android:padding="0dp" android:gravity="center" android:includeFontPadding="false"/>

                <Button android:id="@+id/btn_paseo"
                    android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"
                    android:text="@string/btn_paseo" android:backgroundTint="@color/primary_green"
                    android:textColor="@color/white" android:layout_margin="3dp" android:textSize="12sp"
                    android:padding="0dp" android:gravity="center" android:includeFontPadding="false"/>
            </LinearLayout>

            <!-- fila 2 boton -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <Button android:id="@+id/btn_juego"
                    android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"
                    android:text="@string/btn_juego" android:backgroundTint="@color/primary_green"
                    android:textColor="@color/white" android:layout_margin="3dp" android:textSize="12sp"
                    android:padding="0dp" android:gravity="center" android:includeFontPadding="false"/>

                <Button android:id="@+id/btn_higiene"
                    android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"
                    android:text="@string/btn_higiene" android:backgroundTint="@color/primary_green"
                    android:textColor="@color/white" android:layout_margin="3dp" android:textSize="12sp"
                    android:padding="0dp" android:gravity="center" android:includeFontPadding="false"/>

                <Button android:id="@+id/btn_medicacion"
                    android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"
                    android:text="@string/btn_medicacion" android:backgroundTint="@color/primary_green"
                    android:textColor="@color/white" android:layout_margin="3dp" android:textSize="11sp"
                    android:padding="0dp" android:gravity="center" android:includeFontPadding="false"/>
            </LinearLayout>
    </LinearLayout>

        <!-- historial -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/border_history"
            android:padding="20dp">

            <TextView
                android:id="@+id/tv_historial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/msg_empty_history"
                android:textColor="@color/black"
                android:textSize="16sp"/>
        </ScrollView>

    </LinearLayout>
</ScrollView>